Add create plan tech demo

--- a/realmfit/src/main/res/layout/activity_plan_create.xml
+++ b/realmfit/src/main/res/layout/activity_plan_create.xml
@@ -50,4 +50,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Save plan"/>
+
+    <Button
+        android:id="@+id/addDays"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add days"/>
 </LinearLayout>
