--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -2,9 +2,11 @@
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    tools:openDrawer="left">
 
     <RelativeLayout
         android:id="@+id/layout_main"
@@ -35,11 +37,10 @@
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
+        android:id="@+id/left_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:fitsSystemWindows="true"
-        android:id="@+id/left_drawer"
         app:menu="@menu/drawer_actions">
 
     </android.support.design.widget.NavigationView>
